kubeapps/ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps 
  namespace: kubeapps
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: kubeapps
    servicePort: 8080
